--- a/Operation Gungriffon/37RMS_Havran.html
+++ b/Operation Gungriffon/37RMS_Havran.html
@@ -95,6 +95,33 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
+          <td data-type="DisplayName">37RMS Base Mod</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2405946273" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2405946273</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">37rms Borderpatrol PACK</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2043726044" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2043726044</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">37RMS Factions</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2093541637" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2093541637</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
           <td data-type="DisplayName">37rms PACK</td>
           <td>
             <span class="from-steam">Steam</span>
@@ -158,30 +185,12 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
-          <td data-type="DisplayName">Achilles</td>
+          <td data-type="DisplayName">Advanced Rappelling</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=723217262" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=723217262</a>
-          </td>
-        </tr>
-        <tr data-type="ModContainer">
-          <td data-type="DisplayName">ACR_A3 - Army of the Czech Republic</td>
-          <td>
-            <span class="from-steam">Steam</span>
-          </td>
-          <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=432400996" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=432400996</a>
-          </td>
-        </tr>
-        <tr data-type="ModContainer">
-          <td data-type="DisplayName">ACR_A3 - RHS</td>
-          <td>
-            <span class="from-steam">Steam</span>
-          </td>
-          <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=831914878" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=831914878</a>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=713709341" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=713709341</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -194,12 +203,30 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
+          <td data-type="DisplayName">Apricot's CUP Ratnik Retexture (EMR)</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2285033892" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2285033892</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
           <td data-type="DisplayName">BackpackOnChest</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
             <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=820924072" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=820924072</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">Broma Equipments</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2222311737" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2222311737</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -221,12 +248,39 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
-          <td data-type="DisplayName">Chernarus Redux</td>
+          <td data-type="DisplayName">Client's FPS, Displayed for Zeus</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1128256978" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1128256978</a>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=897295039" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=897295039</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP ACE3 Compatibility Addon - Terrains</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1375890861" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1375890861</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP ACE3 Compatibility Addon - Vehicles</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=621650475" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=621650475</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP ACE3 Compatibility Addon - Weapons</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=549676314" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=549676314</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -239,12 +293,57 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP Terrains - CWA</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=853743366" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=853743366</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
           <td data-type="DisplayName">CUP Terrains - Maps</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
             <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=583544987" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=583544987</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP Terrains - Maps 2.0</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1981964169" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1981964169</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP Units</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=497661914" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=497661914</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP Vehicles</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=541888371" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=541888371</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">CUP Weapons</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=497660133" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=497660133</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -266,21 +365,12 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
-          <td data-type="DisplayName">gac JSDF</td>
+          <td data-type="DisplayName">GCam Cinematic Camera Tool</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=831545783" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=831545783</a>
-          </td>
-        </tr>
-        <tr data-type="ModContainer">
-          <td data-type="DisplayName">GERSOF_LITE_mas</td>
-          <td>
-            <span class="from-steam">Steam</span>
-          </td>
-          <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1152857794" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1152857794</a>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=909893746" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=909893746</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -320,30 +410,39 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
-          <td data-type="DisplayName">NIArms All in One</td>
+          <td data-type="DisplayName">MMBA</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1208517358" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1208517358</a>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1730861612" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1730861612</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
-          <td data-type="DisplayName">NIArms All in One - RHS Compatibility.</td>
+          <td data-type="DisplayName">PLA_Forces_mas</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1400574293" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1400574293</a>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=515847017" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=515847017</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
-          <td data-type="DisplayName">NIArms All in One- ACE Compatibility</td>
+          <td data-type="DisplayName">PLP Markers</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1400566170" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1400566170</a>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=495275491" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=495275491</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">Pook Soviet Air Force Pack</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1595678775" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1595678775</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -362,6 +461,24 @@ a:hover {
           </td>
           <td>
             <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=735566597" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=735566597</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">Radio Animations for Task Force Radio</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1480333388" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1480333388</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">Ratnik 2035</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2251824373" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2251824373</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -401,6 +518,15 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
+          <td data-type="DisplayName">Ride Where You Look</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2153127400" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2153127400</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
           <td data-type="DisplayName">RM Splinter Gear</td>
           <td>
             <span class="from-steam">Steam</span>
@@ -410,30 +536,21 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
+          <td data-type="DisplayName">Russian Gorka Pack (CUP)</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1881373976" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1881373976</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
           <td data-type="DisplayName">Slovak Armed Forces by Reluk</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
             <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=971009565" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=971009565</a>
-          </td>
-        </tr>
-        <tr data-type="ModContainer">
-          <td data-type="DisplayName">Special Stealth Uniforms [SSU]</td>
-          <td>
-            <span class="from-steam">Steam</span>
-          </td>
-          <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2122147403" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2122147403</a>
-          </td>
-        </tr>
-        <tr data-type="ModContainer">
-          <td data-type="DisplayName">SSU Protective Gear Upgrade</td>
-          <td>
-            <span class="from-steam">Steam</span>
-          </td>
-          <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2122144692" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2122144692</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -452,6 +569,33 @@ a:hover {
           </td>
           <td>
             <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1141915433" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1141915433</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">ZEI - Zeus and Eden Interiors</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1251859358" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1251859358</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">Zeus Enhanced</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1779063631" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1779063631</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">Zeus Enhanced - ACE3 Compatibility</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2018593688" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2018593688</a>
           </td>
         </tr>
       </table>
